add car control blocks

--- a/_locales/zh/Coolguy_basic_extension-jsdoc-strings.json
+++ b/_locales/zh/Coolguy_basic_extension-jsdoc-strings.json
@@ -4,26 +4,39 @@
   "Coolguy_basic.Segment_Init": "数码管初始化",
   "Coolguy_basic.SensorGray_Init": "五灰度模块初始化(J1不可用)",
   "Coolguy_basic.SensorGray_ReadOne": "灰度传感器读取",
-  "Coolguy_basic.SensorGray_ReadOne|param|num": "select the sensor, eg: 1",
+  "Coolguy_basic.SensorGray_ReadOne|param|num": "选择传感器, eg: 1",
   "Coolguy_basic.coolguy_IR_Init": "IR_Init",
   "Coolguy_basic.coolguy_IR_KeyValueCmp": "IR_Remote",
-  "Coolguy_basic.coolguy_IR_KeyValueCmp|param|channel": "the channel of remote, eg: 1",
+  "Coolguy_basic.coolguy_IR_KeyValueCmp|param|channel": "遥控通道, eg: 1",
   "Coolguy_basic.coolguy_IR_check": "IR_Check",
   "Coolguy_basic.coolguy_Set_Segment": "数码管显示",
   "Coolguy_basic.coolguy_Set_Segment2": "数码管显示",
   "Coolguy_basic.coolguy_WS2812_SetRGB": "RGB",
-  "Coolguy_basic.coolguy_WS2812_SetRGB|param|b": "set blue, eg: 255",
-  "Coolguy_basic.coolguy_WS2812_SetRGB|param|brightness": "the brightness when RGB on, eg: 120",
-  "Coolguy_basic.coolguy_WS2812_SetRGB|param|g": "set green, eg: 0",
-  "Coolguy_basic.coolguy_WS2812_SetRGB|param|r": "set red, eg: 0",
+  "Coolguy_basic.coolguy_WS2812_SetRGB|param|b": "设定蓝色, eg: 255",
+  "Coolguy_basic.coolguy_WS2812_SetRGB|param|brightness": "RGB亮度, eg: 120",
+  "Coolguy_basic.coolguy_WS2812_SetRGB|param|g": "设定绿色, eg: 0",
+  "Coolguy_basic.coolguy_WS2812_SetRGB|param|r": "设定红色, eg: 0",
   "Coolguy_basic.exter_button": "外接按键检测",
-  "Coolguy_basic.exter_button|param|exterpin": "the ports component connect, eg: exter_ports.J1",
+  "Coolguy_basic.exter_button|param|exterpin": "按钮连接端口, eg: exter_ports.J1",
+  "Coolguy_basic.exter_motor_back": "小车后退\n\n左电机: IO5/11\n右电机: IO8/12",
+  "Coolguy_basic.exter_motor_back|param|speed": "小车速度, eg: 500",
   "Coolguy_basic.exter_motor_drive": "电机控制",
-  "Coolguy_basic.exter_motor_drive|param|dir": "the turn of motor, eg: motor_dir.FWD",
-  "Coolguy_basic.exter_motor_drive|param|exterpin": "the ports component connect, eg: motor_ports.J7",
-  "Coolguy_basic.exter_motor_drive|param|speed": "the speed of motor and range from 0 to 1023, eg: 500",
+  "Coolguy_basic.exter_motor_drive|param|dir": "电机转向, eg: motor_dir.FWD",
+  "Coolguy_basic.exter_motor_drive|param|exterpin": "电机接口, eg: motor_ports.J7",
+  "Coolguy_basic.exter_motor_drive|param|speed": "电机转速(0到1023), eg: 500",
+  "Coolguy_basic.exter_motor_go": "小车直行\n\n左电机: IO5/11\n右电机: IO8/12",
+  "Coolguy_basic.exter_motor_go|param|speed": "小车速度, eg: 500",
+  "Coolguy_basic.exter_motor_left": "小车左转(两轮同向)\n\n左电机: IO5/11\n右电机: IO8/12",
+  "Coolguy_basic.exter_motor_left1": "小车左转(两轮反向)\n\n左电机: IO5/11\n右电机: IO8/12",
+  "Coolguy_basic.exter_motor_left1|param|difspeed": "两轮差速, eg: 400",
+  "Coolguy_basic.exter_motor_left|param|difspeed": "两轮差速, eg: 400",
+  "Coolguy_basic.exter_motor_right": "小车右转(两轮同向)\n\n左电机: IO5/11\n右电机: IO8/12",
+  "Coolguy_basic.exter_motor_right1": "小车右转(两轮反向)\n\n左电机: IO5/11\n右电机: IO8/12",
+  "Coolguy_basic.exter_motor_right1|param|difspeed": "两轮差速, eg: 400",
+  "Coolguy_basic.exter_motor_right|param|difspeed": "两轮差速, eg: 400",
+  "Coolguy_basic.exter_motor_stop": "小车停止\n左电机: IO5/11\n右电机: IO8/12",
   "Coolguy_basic.servo_control": "舵机控制",
-  "Coolguy_basic.servo_control|param|val": "the expected rotation of servo, eg: 90",
+  "Coolguy_basic.servo_control|param|val": "舵机期望角度, eg: 90",
   "Coolguy_basic.ultrasonic_Init": "超声波模块初始化",
   "Coolguy_basic.ultrasonic_get": "超声波读取"
 }
