--- a/_locales/zh/Coolguy_basic_extension-strings.json
+++ b/_locales/zh/Coolguy_basic_extension-strings.json
@@ -10,7 +10,14 @@
   "Coolguy_basic.coolguy_Set_Segment|block": "数码管显示%num|",
   "Coolguy_basic.coolguy_WS2812_SetRGB|block": "亮度%brightness|红%r|绿%g|蓝%b|",
   "Coolguy_basic.exter_button|block": "当按键%pin|被松开时",
+  "Coolguy_basic.exter_motor_back|block": "小车后退%speed|(速度)",
   "Coolguy_basic.exter_motor_drive|block": "电机%exterpin|以%speed|速度%dir|转动",
+  "Coolguy_basic.exter_motor_go|block": "小车直行%speed|(速度)",
+  "Coolguy_basic.exter_motor_left1|block": "小车左转(两轮反向)%difspeed|(差速)",
+  "Coolguy_basic.exter_motor_left|block": "小车左转(两轮同向)%difspeed|(差速)",
+  "Coolguy_basic.exter_motor_right1|block": "小车右转(两轮反向)%difspeed|(差速)",
+  "Coolguy_basic.exter_motor_right|block": "小车右转(两轮同向)%difspeed|(差速)",
+  "Coolguy_basic.exter_motor_stop|block": "小车停止",
   "Coolguy_basic.servo_control|block": "舵机连接至%pin|，舵机旋转%val|度",
   "Coolguy_basic.ultrasonic_Init|block": "超声波模块初始化到%exterpin|",
   "Coolguy_basic.ultrasonic_get|block": "超声波距离读取",
@@ -42,6 +49,7 @@
   "{id:category}Coolguy_basic": "酷哥基础",
   "{id:group}GraySensors": "五灰度",
   "{id:group}IRremote": "红外遥控",
+  "{id:group}Motors": "电机",
   "{id:group}NixieTube": "数码管",
   "{id:group}UltrasoundWave": "超声波",
   "{id:group}others": "其它"
