--- a/_locales/zh/Coolguy_basic_extension-jsdoc-strings.json
+++ b/_locales/zh/Coolguy_basic_extension-jsdoc-strings.json
@@ -1,64 +1,64 @@
 {
-  "Coolguy_basic": "Coolguy basic extension",
-  "Coolguy_basic.CmpStr_Content_ToInt": "Get the number from the compared string",
-  "Coolguy_basic.CmpStr_Content_ToString": "Get the string from the compared",
-  "Coolguy_basic.CmpStr_GetString": "Get the compared string",
-  "Coolguy_basic.CmpStr_IncludeString": "Is the string included?",
-  "Coolguy_basic.CmpStr_SetString": "Set the compared string",
-  "Coolguy_basic.CmpStr_SetString|param|str": "the string as comparsion, eg: hello",
-  "Coolguy_basic.CmpStr_StringEqual": "Is the compared string same as expected?",
-  "Coolguy_basic.Read_PM2_5": "PM2.5 Get",
-  "Coolguy_basic.RunWalkLine": "Search the line in a specific number of intersections",
-  "Coolguy_basic.RunWalkLine_Timer": "Search line in a specific time",
-  "Coolguy_basic.RunWalkLine_Timer|param|Cnt": "the time searching, eg: 5",
-  "Coolguy_basic.RunWalkLine_Timer|param|MaxSpeed": "the maxinum of speed, eg: 255",
-  "Coolguy_basic.RunWalkLine_Turn_Left": "Search line in turn-left mode",
-  "Coolguy_basic.RunWalkLine_Turn_Left|param|LineNum": "the number of intersection, eg: 1",
-  "Coolguy_basic.RunWalkLine_Turn_Left|param|MaxSpeed": "the maxinum of speed, eg: 255",
-  "Coolguy_basic.RunWalkLine_Turn_Right": "Search line in turn-right mode",
-  "Coolguy_basic.RunWalkLine_Turn_Right|param|LineNum": "the number of intersection, eg: 1",
-  "Coolguy_basic.RunWalkLine_Turn_Right|param|MaxSpeed": "the maxinum of speed, eg: 255",
-  "Coolguy_basic.RunWalkLine|param|EndTime": "the time after crossing the intersections, eg: 0.25",
-  "Coolguy_basic.RunWalkLine|param|LineNum": "the number of intersection, eg: 1",
-  "Coolguy_basic.RunWalkLine|param|MaxSpeed": "the maxinum of speed, eg: 255",
-  "Coolguy_basic.Segment_Init": "NixieTube init",
-  "Coolguy_basic.SensorGray_Init": "GraySensors init(Except J1)",
-  "Coolguy_basic.SensorGray_ReadOne": "GraySensors get",
-  "Coolguy_basic.SensorGray_ReadOne|param|num": "select the sensor, eg: 1",
-  "Coolguy_basic.SetCmpValue": "Set the value as comparsion for five GraySensors",
-  "Coolguy_basic.SetCmpValue|param|CmpNum0": "the comparsion fo channel0 GraySensors, eg: 500",
-  "Coolguy_basic.SetCmpValue|param|CmpNum1": "the comparsion fo channel1 GraySensors, eg: 500",
-  "Coolguy_basic.SetCmpValue|param|CmpNum2": "the comparsion fo channel2 GraySensors, eg: 500",
-  "Coolguy_basic.SetCmpValue|param|CmpNum3": "the comparsion fo channel3 GraySensors, eg: 500",
-  "Coolguy_basic.SetCmpValue|param|CmpNum4": "the comparsion fo channel4 GraySensors, eg: 500",
+  "Coolguy_basic": "自定义图形块",
+  "Coolguy_basic.CmpStr_Content_ToInt": "从指定内容前或后获取数字",
+  "Coolguy_basic.CmpStr_Content_ToString": "从指定内容前或后获取字符",
+  "Coolguy_basic.CmpStr_GetString": "获取比较内容",
+  "Coolguy_basic.CmpStr_IncludeString": "是否包含在比较字符中",
+  "Coolguy_basic.CmpStr_SetString": "设定比较内容",
+  "Coolguy_basic.CmpStr_SetString|param|str": "作为比较的字符, eg: hello",
+  "Coolguy_basic.CmpStr_StringEqual": "与比较字符是否相同",
+  "Coolguy_basic.Read_PM2_5": "PM2.5读取",
+  "Coolguy_basic.RunWalkLine": "在规定路口数后寻线",
+  "Coolguy_basic.RunWalkLine_Timer": "在规定时间内寻线",
+  "Coolguy_basic.RunWalkLine_Timer|param|Cnt": "寻线时间, eg: 5",
+  "Coolguy_basic.RunWalkLine_Timer|param|MaxSpeed": "最大速度, eg: 255",
+  "Coolguy_basic.RunWalkLine_Turn_Left": "左转寻线",
+  "Coolguy_basic.RunWalkLine_Turn_Left|param|LineNum": "路口数, eg: 1",
+  "Coolguy_basic.RunWalkLine_Turn_Left|param|MaxSpeed": "最大速度, eg: 255",
+  "Coolguy_basic.RunWalkLine_Turn_Right": "右转寻线",
+  "Coolguy_basic.RunWalkLine_Turn_Right|param|LineNum": "路口数, eg: 1",
+  "Coolguy_basic.RunWalkLine_Turn_Right|param|MaxSpeed": "最大速度, eg: 255",
+  "Coolguy_basic.RunWalkLine|param|EndTime": "经过规定路口数后继续寻线的时间, eg: 0.25",
+  "Coolguy_basic.RunWalkLine|param|LineNum": "路口数, eg: 1",
+  "Coolguy_basic.RunWalkLine|param|MaxSpeed": "最大速度, eg: 255",
+  "Coolguy_basic.Segment_Init": "数码管初始化",
+  "Coolguy_basic.SensorGray_Init": "五灰度模块初始化(J1不可用)",
+  "Coolguy_basic.SensorGray_ReadOne": "灰度传感器读取",
+  "Coolguy_basic.SensorGray_ReadOne|param|num": "选择传感器, eg: 1",
+  "Coolguy_basic.SetCmpValue": "为五灰度设置比较值",
+  "Coolguy_basic.SetCmpValue|param|CmpNum0": "通道0五灰度传感器, eg: 500",
+  "Coolguy_basic.SetCmpValue|param|CmpNum1": "通道1五灰度传感器, eg: 500",
+  "Coolguy_basic.SetCmpValue|param|CmpNum2": "通道2五灰度传感器, eg: 500",
+  "Coolguy_basic.SetCmpValue|param|CmpNum3": "通道3五灰度传感器, eg: 500",
+  "Coolguy_basic.SetCmpValue|param|CmpNum4": "通道4五灰度传感器, eg: 500",
   "Coolguy_basic.coolguy_IR_Init": "IR_Init",
   "Coolguy_basic.coolguy_IR_KeyValueCmp": "IR_Remote",
-  "Coolguy_basic.coolguy_IR_KeyValueCmp|param|channel": "the channel of remote, eg: 1",
+  "Coolguy_basic.coolguy_IR_KeyValueCmp|param|channel": "遥控通道, eg: 1",
   "Coolguy_basic.coolguy_IR_check": "IR_Check",
-  "Coolguy_basic.coolguy_Set_Segment": "NixieTube display",
-  "Coolguy_basic.coolguy_Set_Segment2": "NixieTube display",
+  "Coolguy_basic.coolguy_Set_Segment": "数码管显示",
+  "Coolguy_basic.coolguy_Set_Segment2": "数码管显示",
   "Coolguy_basic.coolguy_WS2812_SetRGB": "RGB",
-  "Coolguy_basic.coolguy_WS2812_SetRGB|param|b": "set blue, eg: 255",
-  "Coolguy_basic.coolguy_WS2812_SetRGB|param|brightness": "the brightness when RGB on, eg: 120",
-  "Coolguy_basic.coolguy_WS2812_SetRGB|param|g": "set green, eg: 0",
-  "Coolguy_basic.coolguy_WS2812_SetRGB|param|r": "set red, eg: 0",
-  "Coolguy_basic.exter_button": "Button",
-  "Coolguy_basic.exter_button|param|exterpin": "the ports component connect, eg: exter_ports.J1",
-  "Coolguy_basic.exter_motor_back": "Car go back\n\nleft: IO5/11\nright: IO8/12",
-  "Coolguy_basic.exter_motor_back|param|speed": "the speed of car, eg: 500",
-  "Coolguy_basic.exter_motor_drive": "Motor",
-  "Coolguy_basic.exter_motor_drive|param|dir": "the turn of motor, eg: motor_dir.FWD",
-  "Coolguy_basic.exter_motor_drive|param|exterpin": "the ports component connect, eg: motor_ports.J7",
-  "Coolguy_basic.exter_motor_drive|param|speed": "the speed of motor and range from 0 to 1023, eg: 500",
-  "Coolguy_basic.exter_motor_go": "Car go straight\n\nleft: IO5/11\nright: IO8/12",
-  "Coolguy_basic.exter_motor_go|param|speed": "the speed of car, eg: 500",
-  "Coolguy_basic.exter_motor_left": "Car turn left(wheels reverse)\n\nleft: IO5/11\nright: IO8/12",
-  "Coolguy_basic.exter_motor_left|param|speed": "the speed of wheels, eg: 500",
-  "Coolguy_basic.exter_motor_right": "Car turn right(wheels reverse)\n\nleft: IO5/11\nright: IO8/12",
-  "Coolguy_basic.exter_motor_right|param|speed": "the speed of wheels, eg: 500",
-  "Coolguy_basic.exter_motor_stop": "Car stop\nleft: IO5/11\nright: IO8/12",
-  "Coolguy_basic.servo_control": "Servo",
-  "Coolguy_basic.servo_control|param|val": "the expected rotation of servo, eg: 90",
-  "Coolguy_basic.ultrasonic_Init": "UltrasoundWave init",
-  "Coolguy_basic.ultrasonic_get": "UltrasoundWave get"
+  "Coolguy_basic.coolguy_WS2812_SetRGB|param|b": "设定蓝色, eg: 255",
+  "Coolguy_basic.coolguy_WS2812_SetRGB|param|brightness": "RGB亮度, eg: 120",
+  "Coolguy_basic.coolguy_WS2812_SetRGB|param|g": "设定绿色, eg: 0",
+  "Coolguy_basic.coolguy_WS2812_SetRGB|param|r": "设定红色, eg: 0",
+  "Coolguy_basic.exter_button": "外接按键检测",
+  "Coolguy_basic.exter_button|param|exterpin": "按钮连接端口, eg: exter_ports.J1",
+  "Coolguy_basic.exter_motor_back": "小车后退\n\n左电机: IO5/11\n右电机: IO8/12",
+  "Coolguy_basic.exter_motor_back|param|speed": "小车速度, eg: 500",
+  "Coolguy_basic.exter_motor_drive": "电机控制",
+  "Coolguy_basic.exter_motor_drive|param|dir": "电机转向, eg: motor_dir.FWD",
+  "Coolguy_basic.exter_motor_drive|param|exterpin": "电机接口, eg: motor_ports.J7",
+  "Coolguy_basic.exter_motor_drive|param|speed": "电机转速(0到1023), eg: 500",
+  "Coolguy_basic.exter_motor_go": "小车前进\n\n左电机: IO5/11\n右电机: IO8/12",
+  "Coolguy_basic.exter_motor_go|param|speed": "小车速度, eg: 500",
+  "Coolguy_basic.exter_motor_left": "小车左转(两轮反向)\n\n左电机: IO5/11\n右电机: IO8/12",
+  "Coolguy_basic.exter_motor_left|param|speed": "轮子速度, eg: 500",
+  "Coolguy_basic.exter_motor_right": "小车右转(两轮反向)\n\n左电机: IO5/11\n右电机: IO8/12",
+  "Coolguy_basic.exter_motor_right|param|speed": "轮子速度, eg: 500",
+  "Coolguy_basic.exter_motor_stop": "小车停止\n左电机: IO5/11\n右电机: IO8/12",
+  "Coolguy_basic.servo_control": "舵机控制",
+  "Coolguy_basic.servo_control|param|val": "舵机期望角度, eg: 90",
+  "Coolguy_basic.ultrasonic_Init": "超声波模块初始化",
+  "Coolguy_basic.ultrasonic_get": "超声波读取"
 }
