--- a/_locales/zh/Coolguy_basic_extension-strings.json
+++ b/_locales/zh/Coolguy_basic_extension-strings.json
@@ -1,37 +1,37 @@
 {
-  "CmpStr_dir.ToAfter|block": "ToAfter",
-  "CmpStr_dir.ToBefore|block": "ToBefore",
-  "Coolguy_basic.CmpStr_Content_ToInt|block": "Get the number %String_part| %position|from the compared string",
-  "Coolguy_basic.CmpStr_Content_ToString|block": "Get the string %String_part| %position|from the compared string",
-  "Coolguy_basic.CmpStr_GetString|block": "Get the compared string",
-  "Coolguy_basic.CmpStr_IncludeString|block": "Do the compared string include %str|",
-  "Coolguy_basic.CmpStr_SetString|block": "Set the compared string %str|",
-  "Coolguy_basic.CmpStr_StringEqual|block": "Is the compared string same as %str|",
-  "Coolguy_basic.Read_PM2_5|block": "PM2.5 Get",
-  "Coolguy_basic.RunWalkLine_Timer|block": "Max speed%MaxSpeed| Search line in %Cnt| seconds",
-  "Coolguy_basic.RunWalkLine_Turn_Left|block": "Max speed %MaxSpeed| Turn left after %LineNum| intersections",
-  "Coolguy_basic.RunWalkLine_Turn_Right|block": "Max speed %MaxSpeed| Turn right after %LineNum| intersections",
-  "Coolguy_basic.RunWalkLine|block": "Max speed%MaxSpeed| Search %LineNum| intersection in %EndTime| seconds",
-  "Coolguy_basic.Segment_Init|block": "Set port at %exterpin|",
-  "Coolguy_basic.SensorGray_Init|block": "Set GraySensors at %exterpin|",
-  "Coolguy_basic.SensorGray_ReadOne|block": "get the value from No.%num| Sensor",
-  "Coolguy_basic.SetCmpValue|block": "set comparsion numbers from left to right as %CmpNum0|%CmpNum1|%CmpNum2|%CmpNum3|%CmpNum4|",
-  "Coolguy_basic.coolguy_IR_Init|block": "Set port at %pin|",
-  "Coolguy_basic.coolguy_IR_KeyValueCmp|block": "Remote channel at %channel| when %key| is pressed",
-  "Coolguy_basic.coolguy_IR_check|block": "IR receive",
-  "Coolguy_basic.coolguy_Set_Segment2|block": "NixieTube display %num1|:%num2|",
-  "Coolguy_basic.coolguy_Set_Segment|block": "NixieTube displays number %num|",
-  "Coolguy_basic.coolguy_WS2812_SetRGB|block": "Brightness %brightness|Red %r|Green %g|Blue%b|",
-  "Coolguy_basic.exter_button|block": "Is button %pin|released?",
-  "Coolguy_basic.exter_motor_back|block": "let car go back at %speed|",
-  "Coolguy_basic.exter_motor_drive|block": "Set motor %exterpin|speed %speed| as %dir|",
-  "Coolguy_basic.exter_motor_go|block": "let car go straight at %speed|",
-  "Coolguy_basic.exter_motor_left|block": "let car turn left %speed|",
-  "Coolguy_basic.exter_motor_right|block": "let car turn right %speed|",
-  "Coolguy_basic.exter_motor_stop|block": "let car stop",
-  "Coolguy_basic.servo_control|block": "Servo %pin| turn to %val|",
-  "Coolguy_basic.ultrasonic_Init|block": "Set port at %exterpin|",
-  "Coolguy_basic.ultrasonic_get|block": "Get the value of distance",
+  "CmpStr_dir.ToAfter|block": "后面的",
+  "CmpStr_dir.ToBefore|block": "前面的",
+  "Coolguy_basic.CmpStr_Content_ToInt|block": "从比较内容中提取%String_part| %position|数字",
+  "Coolguy_basic.CmpStr_Content_ToString|block": "从比较内容中提取%String_part| %position|文本",
+  "Coolguy_basic.CmpStr_GetString|block": "获取比较内容",
+  "Coolguy_basic.CmpStr_IncludeString|block": "比较内容包含%str|",
+  "Coolguy_basic.CmpStr_SetString|block": "设定比较内容为%str|",
+  "Coolguy_basic.CmpStr_StringEqual|block": "比较内容为%str|",
+  "Coolguy_basic.Read_PM2_5|block": "PM2.5读取",
+  "Coolguy_basic.RunWalkLine_Timer|block": "转速%MaxSpeed|寻线%Cnt|秒后停止",
+  "Coolguy_basic.RunWalkLine_Turn_Left|block": "转速%MaxSpeed|左转弯%LineNum|线",
+  "Coolguy_basic.RunWalkLine_Turn_Right|block": "转速%MaxSpeed|右转弯%LineNum|线",
+  "Coolguy_basic.RunWalkLine|block": "转速%MaxSpeed|寻%LineNum|个路口后冲%EndTime|秒",
+  "Coolguy_basic.Segment_Init|block": "数码管初始化到引脚%exterpin|",
+  "Coolguy_basic.SensorGray_Init|block": "设置五灰度传感器在端口%exterpin|",
+  "Coolguy_basic.SensorGray_ReadOne|block": "读五灰度传感器%num|",
+  "Coolguy_basic.SetCmpValue|block": "设置五灰度比较(从左到右)%CmpNum0|%CmpNum1|%CmpNum2|%CmpNum3|%CmpNum4|",
+  "Coolguy_basic.coolguy_IR_Init|block": "红外遥控初始化于引脚|%pin|",
+  "Coolguy_basic.coolguy_IR_KeyValueCmp|block": "遥控通道%channel|%key|键按下",
+  "Coolguy_basic.coolguy_IR_check|block": "红外遥控接收",
+  "Coolguy_basic.coolguy_Set_Segment2|block": "数码管显示%num1|:%num2|",
+  "Coolguy_basic.coolguy_Set_Segment|block": "数码管显示%num|",
+  "Coolguy_basic.coolguy_WS2812_SetRGB|block": "亮度%brightness|红%r|绿%g|蓝%b|",
+  "Coolguy_basic.exter_button|block": "当按键%pin|被松开时",
+  "Coolguy_basic.exter_motor_back|block": "小车后退%speed|(速度)",
+  "Coolguy_basic.exter_motor_drive|block": "电机%exterpin|以%speed|速度%dir|转动",
+  "Coolguy_basic.exter_motor_go|block": "小车前进%speed|(速度)",
+  "Coolguy_basic.exter_motor_left|block": "小车左转%speed|(速度)",
+  "Coolguy_basic.exter_motor_right|block": "小车右转%speed|(速度)",
+  "Coolguy_basic.exter_motor_stop|block": "小车停止",
+  "Coolguy_basic.servo_control|block": "舵机连接至%pin|，舵机旋转%val|度",
+  "Coolguy_basic.ultrasonic_Init|block": "超声波模块初始化到%exterpin|",
+  "Coolguy_basic.ultrasonic_get|block": "超声波距离读取",
   "Coolguy_basic|block": "Coolguy_basic",
   "exter_ports.J1|block": "AD0",
   "exter_ports.J2|block": "IO1",
@@ -41,28 +41,28 @@
   "exter_ports.J6|block": "IO15/16",
   "exter_ports1.J5|block": "IO13/14",
   "exter_ports1.J6|block": "IO15/16",
-  "motor_dir.FWD|block": "FWD",
-  "motor_dir.REV|block": "REV",
+  "motor_dir.FWD|block": "正转",
+  "motor_dir.REV|block": "反转",
   "motor_ports.J7|block": "IO5/11",
   "motor_ports.J8|block": "IO8/12",
-  "remote_key.Down_B|block": "Down_B",
-  "remote_key.Down|block": "Down",
-  "remote_key.Left_B|block": "Left_B",
-  "remote_key.Left|block": "Left",
-  "remote_key.Non|block": "Non",
-  "remote_key.Right_B|block": "Right_B",
-  "remote_key.Right|block": "Right",
-  "remote_key.Up_B|block": "Up_B",
-  "remote_key.Up|block": "Up",
+  "remote_key.Down_B|block": "下+B",
+  "remote_key.Down|block": "下",
+  "remote_key.Left_B|block": "左+B",
+  "remote_key.Left|block": "左",
+  "remote_key.Non|block": "无",
+  "remote_key.Right_B|block": "右+B",
+  "remote_key.Right|block": "右",
+  "remote_key.Up_B|block": "上+B",
+  "remote_key.Up|block": "上",
   "servo_ports.J2|block": "IO1",
   "servo_ports.J3|block": "IO2",
   "servo_ports.J4|block": "IO16",
-  "{id:category}Coolguy_basic": "Coolguy_basic",
-  "{id:group}CmpStr": "CmpStr",
-  "{id:group}IRremote": "IRremote",
-  "{id:group}Motors": "Motors",
-  "{id:group}NixieTube": "NixieTube",
-  "{id:group}UltrasoundWave": "UltrasoundWave",
-  "{id:group}WalkLine": "WalkLine",
-  "{id:group}others": "others"
+  "{id:category}Coolguy_basic": "酷哥基础",
+  "{id:group}CmpStr": "字符串比较",
+  "{id:group}WalkLine": "循线模块",
+  "{id:group}IRremote": "红外遥控",
+  "{id:group}Motors": "电机",
+  "{id:group}NixieTube": "数码管",
+  "{id:group}UltrasoundWave": "超声波",
+  "{id:group}others": "其它"
 }
