modified RGB blocks

--- a/_locales/Coolguy_basic_extension-jsdoc-strings.json
+++ b/_locales/Coolguy_basic_extension-jsdoc-strings.json
@@ -1,16 +1,43 @@
 {
   "Coolguy_basic": "Coolguy basic extension",
-  "Coolguy_basic.Read_PM2_5": "PM2.5 Get",
+  "Coolguy_basic.CmpStr_Content_ToInt": "Get the number from the compared string",
+  "Coolguy_basic.CmpStr_Content_ToString": "Get the string from the compared",
+  "Coolguy_basic.CmpStr_GetString": "Get the compared string",
+  "Coolguy_basic.CmpStr_IncludeString": "Is the string included?",
+  "Coolguy_basic.CmpStr_SetString": "Set the compared string",
+  "Coolguy_basic.CmpStr_SetString|param|str": "the string as comparsion, eg: hello",
+  "Coolguy_basic.CmpStr_StringEqual": "Is the compared string same as expected?",
+  "Coolguy_basic.RunWalkLine": "Search the line in a specific number of intersections",
+  "Coolguy_basic.RunWalkLine_Timer": "Search line in a specific time",
+  "Coolguy_basic.RunWalkLine_Timer|param|Cnt": "the time searching, eg: 5",
+  "Coolguy_basic.RunWalkLine_Timer|param|MaxSpeed": "the maxinum of speed, eg: 255",
+  "Coolguy_basic.RunWalkLine_Turn_Left": "Search line in turn-left mode",
+  "Coolguy_basic.RunWalkLine_Turn_Left|param|LineNum": "the number of intersection, eg: 1",
+  "Coolguy_basic.RunWalkLine_Turn_Left|param|MaxSpeed": "the maxinum of speed, eg: 255",
+  "Coolguy_basic.RunWalkLine_Turn_Right": "Search line in turn-right mode",
+  "Coolguy_basic.RunWalkLine_Turn_Right|param|LineNum": "the number of intersection, eg: 1",
+  "Coolguy_basic.RunWalkLine_Turn_Right|param|MaxSpeed": "the maxinum of speed, eg: 255",
+  "Coolguy_basic.RunWalkLine|param|EndTime": "the time after crossing the intersections, eg: 0.25",
+  "Coolguy_basic.RunWalkLine|param|LineNum": "the number of intersection, eg: 1",
+  "Coolguy_basic.RunWalkLine|param|MaxSpeed": "the maxinum of speed, eg: 255",
   "Coolguy_basic.Segment_Init": "NixieTube init",
   "Coolguy_basic.SensorGray_Init": "GraySensors init(Except J1)",
   "Coolguy_basic.SensorGray_ReadOne": "GraySensors get",
   "Coolguy_basic.SensorGray_ReadOne|param|num": "select the sensor, eg: 1",
+  "Coolguy_basic.SetCmpValue": "Set the value as comparsion for five GraySensors",
+  "Coolguy_basic.SetCmpValue|param|CmpNum0": "the comparsion fo channel0 GraySensors, eg: 500",
+  "Coolguy_basic.SetCmpValue|param|CmpNum1": "the comparsion fo channel1 GraySensors, eg: 500",
+  "Coolguy_basic.SetCmpValue|param|CmpNum2": "the comparsion fo channel2 GraySensors, eg: 500",
+  "Coolguy_basic.SetCmpValue|param|CmpNum3": "the comparsion fo channel3 GraySensors, eg: 500",
+  "Coolguy_basic.SetCmpValue|param|CmpNum4": "the comparsion fo channel4 GraySensors, eg: 500",
   "Coolguy_basic.coolguy_IR_Init": "IR_Init",
   "Coolguy_basic.coolguy_IR_KeyValueCmp": "IR_Remote",
   "Coolguy_basic.coolguy_IR_KeyValueCmp|param|channel": "the channel of remote, eg: 1",
   "Coolguy_basic.coolguy_IR_check": "IR_Check",
   "Coolguy_basic.coolguy_Set_Segment": "NixieTube display",
   "Coolguy_basic.coolguy_Set_Segment2": "NixieTube display",
+  "Coolguy_basic.coolguy_WS2812_Init": "RGB",
+  "Coolguy_basic.coolguy_WS2812_Init|param|exterpin": "the ports component connect, eg: servo_ports.J2",
   "Coolguy_basic.coolguy_WS2812_SetRGB": "RGB",
   "Coolguy_basic.coolguy_WS2812_SetRGB|param|b": "set blue, eg: 255",
   "Coolguy_basic.coolguy_WS2812_SetRGB|param|brightness": "the brightness when RGB on, eg: 120",
@@ -18,10 +45,19 @@
   "Coolguy_basic.coolguy_WS2812_SetRGB|param|r": "set red, eg: 0",
   "Coolguy_basic.exter_button": "Button",
   "Coolguy_basic.exter_button|param|exterpin": "the ports component connect, eg: exter_ports.J1",
+  "Coolguy_basic.exter_motor_back": "Car go back\n\nleft: IO5/11\nright: IO8/12",
+  "Coolguy_basic.exter_motor_back|param|speed": "the speed of car, eg: 500",
   "Coolguy_basic.exter_motor_drive": "Motor",
   "Coolguy_basic.exter_motor_drive|param|dir": "the turn of motor, eg: motor_dir.FWD",
   "Coolguy_basic.exter_motor_drive|param|exterpin": "the ports component connect, eg: motor_ports.J7",
   "Coolguy_basic.exter_motor_drive|param|speed": "the speed of motor and range from 0 to 1023, eg: 500",
+  "Coolguy_basic.exter_motor_go": "Car go straight\n\nleft: IO5/11\nright: IO8/12",
+  "Coolguy_basic.exter_motor_go|param|speed": "the speed of car, eg: 500",
+  "Coolguy_basic.exter_motor_left": "Car turn left(wheels reverse)\n\nleft: IO5/11\nright: IO8/12",
+  "Coolguy_basic.exter_motor_left|param|speed": "the speed of wheels, eg: 500",
+  "Coolguy_basic.exter_motor_right": "Car turn right(wheels reverse)\n\nleft: IO5/11\nright: IO8/12",
+  "Coolguy_basic.exter_motor_right|param|speed": "the speed of wheels, eg: 500",
+  "Coolguy_basic.exter_motor_stop": "Car stop\nleft: IO5/11\nright: IO8/12",
   "Coolguy_basic.servo_control": "Servo",
   "Coolguy_basic.servo_control|param|val": "the expected rotation of servo, eg: 90",
   "Coolguy_basic.ultrasonic_Init": "UltrasoundWave init",
