--- a/_locales/Coolguy_basic_extension-strings.json
+++ b/_locales/Coolguy_basic_extension-strings.json
@@ -1,16 +1,34 @@
 {
-  "Coolguy_basic.Read_PM2_5|block": "PM2.5 Get",
+  "CmpStr_dir.ToAfter|block": "ToAfter",
+  "CmpStr_dir.ToBefore|block": "ToBefore",
+  "Coolguy_basic.CmpStr_Content_ToInt|block": "Get the number %String_part| %position|from the compared string",
+  "Coolguy_basic.CmpStr_Content_ToString|block": "Get the string %String_part| %position|from the compared string",
+  "Coolguy_basic.CmpStr_GetString|block": "Get the compared string",
+  "Coolguy_basic.CmpStr_IncludeString|block": "Do the compared string include %str|",
+  "Coolguy_basic.CmpStr_SetString|block": "Set the compared string %str|",
+  "Coolguy_basic.CmpStr_StringEqual|block": "Is the compared string same as %str|",
+  "Coolguy_basic.RunWalkLine_Timer|block": "Max speed%MaxSpeed| Search line in %Cnt| seconds",
+  "Coolguy_basic.RunWalkLine_Turn_Left|block": "Max speed %MaxSpeed| Turn left after %LineNum| intersections",
+  "Coolguy_basic.RunWalkLine_Turn_Right|block": "Max speed %MaxSpeed| Turn right after %LineNum| intersections",
+  "Coolguy_basic.RunWalkLine|block": "Max speed%MaxSpeed| Search %LineNum| intersection in %EndTime| seconds",
   "Coolguy_basic.Segment_Init|block": "Set port at %exterpin|",
   "Coolguy_basic.SensorGray_Init|block": "Set GraySensors at %exterpin|",
   "Coolguy_basic.SensorGray_ReadOne|block": "get the value from No.%num| Sensor",
+  "Coolguy_basic.SetCmpValue|block": "set comparsion numbers from left to right as %CmpNum0|%CmpNum1|%CmpNum2|%CmpNum3|%CmpNum4|",
   "Coolguy_basic.coolguy_IR_Init|block": "Set port at %pin|",
   "Coolguy_basic.coolguy_IR_KeyValueCmp|block": "Remote channel at %channel| when %key| is pressed",
   "Coolguy_basic.coolguy_IR_check|block": "IR receive",
   "Coolguy_basic.coolguy_Set_Segment2|block": "NixieTube display %num1|:%num2|",
   "Coolguy_basic.coolguy_Set_Segment|block": "NixieTube displays number %num|",
+  "Coolguy_basic.coolguy_WS2812_Init|block": "Set RGB port as %exterpin",
   "Coolguy_basic.coolguy_WS2812_SetRGB|block": "Brightness %brightness|Red %r|Green %g|Blue%b|",
   "Coolguy_basic.exter_button|block": "Is button %pin|released?",
+  "Coolguy_basic.exter_motor_back|block": "let car go back at %speed|",
   "Coolguy_basic.exter_motor_drive|block": "Set motor %exterpin|speed %speed| as %dir|",
+  "Coolguy_basic.exter_motor_go|block": "let car go straight at %speed|",
+  "Coolguy_basic.exter_motor_left|block": "let car turn left %speed|",
+  "Coolguy_basic.exter_motor_right|block": "let car turn right %speed|",
+  "Coolguy_basic.exter_motor_stop|block": "let car stop",
   "Coolguy_basic.servo_control|block": "Servo %pin| turn to %val|",
   "Coolguy_basic.ultrasonic_Init|block": "Set port at %exterpin|",
   "Coolguy_basic.ultrasonic_get|block": "Get the value of distance",
@@ -40,9 +58,12 @@
   "servo_ports.J3|block": "IO2",
   "servo_ports.J4|block": "IO16",
   "{id:category}Coolguy_basic": "Coolguy_basic",
-  "{id:group}GraySensors": "GraySensors",
+  "{id:group}CmpStr": "CmpStr",
   "{id:group}IRremote": "IRremote",
+  "{id:group}Motors": "Motors",
   "{id:group}NixieTube": "NixieTube",
+  "{id:group}RGB": "RGB",
   "{id:group}UltrasoundWave": "UltrasoundWave",
+  "{id:group}WalkLine": "WalkLine",
   "{id:group}others": "others"
 }
