--- a/_locales/zh/Coolguy_basic_extension-jsdoc-strings.json
+++ b/_locales/zh/Coolguy_basic_extension-jsdoc-strings.json
@@ -26,17 +26,19 @@
   "Coolguy_basic.SensorGray_ReadOne": "灰度传感器读取",
   "Coolguy_basic.SensorGray_ReadOne|param|num": "选择传感器, eg: 1",
   "Coolguy_basic.SetCmpValue": "为五灰度设置比较值",
-  "Coolguy_basic.SetCmpValue|param|CmpNum0": "通道0五灰度传感器, eg: 400",
-  "Coolguy_basic.SetCmpValue|param|CmpNum1": "通道1五灰度传感器, eg: 400",
-  "Coolguy_basic.SetCmpValue|param|CmpNum2": "通道2五灰度传感器, eg: 400",
-  "Coolguy_basic.SetCmpValue|param|CmpNum3": "通道3五灰度传感器, eg: 400",
-  "Coolguy_basic.SetCmpValue|param|CmpNum4": "通道4五灰度传感器, eg: 400",
+  "Coolguy_basic.SetCmpValue|param|CmpNum0": "通道0五灰度传感器, eg: 500",
+  "Coolguy_basic.SetCmpValue|param|CmpNum1": "通道1五灰度传感器, eg: 500",
+  "Coolguy_basic.SetCmpValue|param|CmpNum2": "通道2五灰度传感器, eg: 500",
+  "Coolguy_basic.SetCmpValue|param|CmpNum3": "通道3五灰度传感器, eg: 500",
+  "Coolguy_basic.SetCmpValue|param|CmpNum4": "通道4五灰度传感器, eg: 500",
   "Coolguy_basic.coolguy_IR_Init": "IR_Init",
   "Coolguy_basic.coolguy_IR_KeyValueCmp": "IR_Remote",
   "Coolguy_basic.coolguy_IR_KeyValueCmp|param|channel": "遥控通道, eg: 1",
   "Coolguy_basic.coolguy_IR_check": "IR_Check",
   "Coolguy_basic.coolguy_Set_Segment": "数码管显示",
   "Coolguy_basic.coolguy_Set_Segment2": "数码管显示",
+  "Coolguy_basic.coolguy_WS2812_Init": "RGB",
+  "Coolguy_basic.coolguy_WS2812_Init|param|exterpin": "RGB接口, eg: servo_ports.J2",
   "Coolguy_basic.coolguy_WS2812_SetRGB": "RGB",
   "Coolguy_basic.coolguy_WS2812_SetRGB|param|b": "设定蓝色, eg: 255",
   "Coolguy_basic.coolguy_WS2812_SetRGB|param|brightness": "RGB亮度, eg: 120",
